# odyssey-attributional-semantics

./: .gitignore  AGENTS.md  Makefile  README.md  environment.freeze.txt  pyproject.toml  requirements-lock.txt  run_manifest.json
config/: corpus.json  entities.json  ontology.json  visualizations.json
data/: raw_checksums.sha256
data/processed/: alignment_anchors.csv  alignment_pairwise.csv  book_anchors.csv  validation_sample.csv
docs/: NATIVE_BOOK_ANCHOR_METHOD.md  Odyssey_Computational_Protocol_v2.md  VISUALIZATION_CONFIGURATION.md  audit_corpus_v2.py  corpus_decision_log.csv  corpus_manifest.json  prepare_gutenberg_additions.py  prepare_retained_texts.py
models/: embedding_metadata.json  event_context_metadata.csv  event_context_svd.npz  svd_components.npy  tfidf_vocabulary.json
outputs/hypergraph_visualizations/: README.md  visualization_inventory.csv
outputs/hypergraphs/: butcher_lang_1879_attribute_projection.graphml  butcher_lang_1879_hypergraph.json  butcher_lang_1879_target_projection.graphml  butler_1900_attribute_projection.graphml  butler_1900_hypergraph.json  butler_1900_target_projection.graphml  chapman_1616_attribute_projection.graphml  chapman_1616_hypergraph.json  chapman_1616_target_projection.graphml  cowper_1791_attribute_projection.graphml  cowper_1791_hypergraph.json  cowper_1791_target_projection.graphml  murray_1919_attribute_projection.graphml  murray_1919_hypergraph.json  (+4 more)
scripts/: generate_hypergraph_visualizations.py  run_pipeline.py  validate_release.py  validate_visualizations.py
tests/: test_pipeline.py  test_regressions.py
(+90 files in other folders)
